@@ -10,7 +10,6 @@ class Priest < Humanoid
     options = {
       speed: 2,
       encumbrance: 0.4,
-      elasticity: 0.1,
       z_offset: -2,
       health: MAX_HEALTH,
     }.merge! options
