@@ -6,6 +6,7 @@ v0.0.3alpha (unreleased)
 
   * Audio settings in options.
   * Controls (keys/gamepad) settings in options.
+  * Throwing items now makes them travel a lot further (Except throwing animals, which generally is less far now).
   * Creatures can be knocked down if hit with a sufficiently large thrown object.
   * Added a disaster to the forest/dryad level (trees awaken).
   * Replaced game text overlay with a graphical overlay.
